Page info tree and listitem is white on white, not readable with dark theme
Categories
(Firefox :: Theme, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | --- | unaffected |
firefox95 | --- | verified |
People
(Reporter: alice0775, Assigned: emilio)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(2 files)
Steps To Reproduce:
- Enable Dark Theme
- Open any page ( e.g. https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions )
- Open Page Info
Actual Results:
Tree and listitem is white on white/not readable
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ef7b596bb385f46280eb1492009bf8fb541e17db&tochange=b94153cca1f7d677fbbcc1a0d4923d81ddec8958
Assignee | ||
Updated•1 year ago
|
![]() |
Reporter | |
Comment 1•1 year ago
•
|
||
Listitem in permission tab is fixed in autoland by bug 1734367 .
Assignee | ||
Updated•1 year ago
|
Assignee | ||
Comment 2•1 year ago
|
||
Comment 3•1 year ago
|
||
I got a different range from mozregression that points to bug 1733569:
Last good revision: 1ff04e10cd2318b494c0f05777cd80291289d127
First bad revision: d39b23efefe7e7d89d8dfd0ba188ad6af2b0a9ed
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=1ff04e10cd2318b494c0f05777cd80291289d127&tochange=d39b23efefe7e7d89d8dfd0ba188ad6af2b0a9ed
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/eea2d5968d6c Implement some tree dark theme colors for Windows. r=dholbert
Comment 5•1 year ago
|
||
Set release status flags based on info from the regressing bug 1734359
Comment 6•1 year ago
|
||
bugherder |
Updated•1 year ago
|
Comment 7•1 year ago
|
||
Reproduced the issue on Windows 10x64 with Firefox 95.0a1 (20211007215152).
Verified fixed with Firefox 95.0b2 (20211102190739) on Windows 10x64, macOS 10.15 and Ubuntu 21.04.
Updated•1 year ago
|
Description
•