Bug 1734658 - Implement some tree dark theme colors for Windows. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D127888